syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "protos/platform/ptype/page.proto";
import "validate/validate.proto";

package hydra_lcp;
option go_package = "github.com/yuansuan/ticp/iPaaS/sso/protos";

service HydraLcpService {
    rpc GetUserInfo(GetUserInfoReq) returns (UserInfo);

    rpc ListUsers(ListUserReq) returns (UserInfoList);

    rpc UpdateName(UserInfoReq) returns (UserInfo);

    rpc QueryInfoByPhoneNumber(QueryInfoByPhoneNumberReq) returns (UserInfo);

    rpc CheckPassword(UserInfoReq) returns (google.protobuf.Empty);

    rpc CheckPassword2(CheckPasswordReq) returns (UserInfo);

    // 在SSO中添加一个用户
    rpc AddUser(AddUserReq) returns (AddUserResp);

    rpc AddUser2(AddUserReq) returns (AddUserResp);
}

message GetUserInfoReq {
    // @inject_tag: `validate:"is_ysid"`
    string ysid = 1;
}

message ListUserReq {
    ptype.Page page = 1;
    string name = 2;
}

message UserInfoReq {
    // @inject_tag: `validate:"is_ysid"`
    string ysid = 1;
    string param = 2;
}

message CheckPasswordReq {
    // @inject_tag: `validate:"is_ysid"`
    string ysid = 1;
    string phone = 2;
    string email = 3;
    string password = 4;
}

message UserInfo {
    // @inject_tag: `validate:"is_ysid"`
    string ysid = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string wechat_union_id = 5;
    string wechat_open_id = 6;
    string wechat_nick_name = 7;
    string real_name = 8;
    string user_name = 9;
    string display_user_name = 10;

    string headimg_url =11;
    string user_channel =12;
    string user_source =13;
    string user_referer=14;

    google.protobuf.Timestamp create_time=15;
    string company = 16;
}


message UserInfoList {
    repeated UserInfo user_info = 1;
    int64 total = 2;
}

message QueryInfoByPhoneNumberReq {
    string phone_number = 1;
}

message AddUserReq {
    string phone = 1;
    string password = 2;
    // 用户注册来源（可扩展）：xx活动注册、xx用户推荐
    string user_source = 3;
    // 用户注册渠道（可扩展）：远算云、智算未来、航天云网
    string user_channel = 4;
    string name = 5;
    string company_name = 6;
    string unified_social_creditCode = 7;
    string email = 8;
}

message AddUserResp {
    string user_id = 1;
}